# runtime

./: .gitignore  Makefile  README.md  ROADMAP.md  agentcore-gap-plan.md  deploying-sdk-agents.md  go.mod  go.sum  hello-claude.md  instruction.md  operator-guide.md  quickstart.md  runtime.md  runtime.nutrition.yaml  runtime.yaml  tenant-guide.md
agentruntime/: classify.go  classify_test.go  config.go  config_test.go  eval.go  eval_test.go  kgfn_test.go  limits_test.go  metrics_test.go  serve.go  serve_test.go  server.go  server_subject_test.go  server_test.go  sse.go  sse_test.go  teardown_test.go  turnstep.go  turnstep_test.go
conformance/: conformance.go  conformance_test.go
console/: agenthttp.go  agenthttp_test.go  console.go  console_test.go  csrf.go  csrf_test.go  eval_panels_test.go  eval_runs_test.go  logout_test.go  managed_agents_test.go  oauthstate.go  oauthstate_test.go  observability.go  observability_test.go  onboarding_test.go  policies_test.go  quota_panel_test.go  tenantcookie.go
contrib/shims/python/: README.md  main.py  pyproject.toml  runtime.openai-shim.yaml
contrib/shims/python/adapters/: openai_agents.py
contrib/shims/python/runtime_contract/: __init__.py  adapter.py  app.py  events.py  metrics.py  serve.py  sse.py  store.py
contrib/shims/python/tests/: test_contract.py  test_metrics.py  test_serve.py  test_store.py
controlplane/: admin.go  admin_test.go  agentadmin.go  agentadmin_test.go  api.go  api_dial_test.go  api_subject_test.go  auth.go  auth_test.go  evaladmin.go  evaladmin_test.go  evalinvoker.go  evalinvoker_test.go  evalpolicy.go  evalpolicyadmin_test.go  identity_middleware.go  identity_middleware_test.go  monitor.go  monitor_test.go  monitors.go  monitors_test.go  onboarding.go  onboarding_oauth2_test.go  onboarding_test.go  policyadmin.go  policyadmin_test.go  poolmanager.go  poolmanager_test.go  pricing_env_test.go  proxy.go  proxy_test.go  proxykind_test.go  quotaadmin.go  quotaadmin_test.go  register.go  register_test.go  registry.go  registry_test.go  router_test.go  supervisor.go  (+2 more)
deploy/: Dockerfile  Dockerfile.dockerignore  browser.Dockerfile  docker-compose.full.yml  docker-compose.obs.yml  docker-compose.yml  prometheus.yml  sandbox.Dockerfile
docs/: agentcore-gap-plan.md  deploying-sdk-agents.md  operator-guide.md  quickstart.md  tenant-guide.md
examples/food-label-advisor/: .env.example  .gitignore  README.md  adapter.py  agent.py  pyproject.toml  run_local.py  serve.py  tools.py
examples/hello-claude/: .env.example  .gitignore  Makefile  README.md  adapter.py  pyproject.toml  runtime.hello-claude.yaml  serve.py  sessions.py
examples/hello-claude/tests/: test_adapter.py
examples/nutrition-label-claude/: .env.example  .gitignore  Makefile  README.md  adapter.py  agent.py  pyproject.toml  runtime.nutrition-claude.yaml  serve.py  sessions.py  spike_vision.py  tools.py
examples/nutrition-label-claude/tests/: test_adapter.py  test_agent.py  test_sessions.py  test_tools.py
examples/nutrition-label-openai/: .env.example  Makefile  README.md  adapter.py  agent.py  main.py  pyproject.toml  runtime.nutrition-openai.yaml  serve.py
examples/nutrition-label-openai/tests/: test_render.py
test/: autoscale_test.go  doc.go  enrichment_test.go  eval_e2e_test.go  eval_failures_e2e_test.go  eval_online_e2e_test.go  gateway_browser_e2e_test.go  gateway_e2e_test.go  gateway_rest_e2e_test.go  gateway_sandbox_e2e_test.go  gateway_search_e2e_test.go  gateway_upstream_store_test.go  identity_test.go  kg_runturn_e2e_test.go  limits_test.go  managed_agent_store_test.go  memory_e2e_test.go  memory_ingest_e2e_test.go  memory_recall_e2e_test.go  memory_summary_e2e_test.go  metering_test.go  multiagent_test.go  nutrition_test.go  oauth2_cred_test.go  obo_exchange_e2e_test.go  observability_e2e_test.go  onboarding_e2e_test.go  operability_test.go  policy_test.go  quota_test.go  registration_handshake_test.go  remote_agent_test.go  remote_pool_test.go  replica_pools_test.go  resume_test.go  (+3 more)
(+339 files in other folders)
