[project]
name = "nutrition-label-openai"
version = "0.1.0"
description = "SG Nutrition Label Investigator — OpenAI Agents SDK example agent for runtime"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "openai-agents>=0.17.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "runtime-contract",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv.sources]
runtime-contract = { path = "../../contrib/shims/python", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
