[project]
name = "runtime-contract-shim"
version = "0.1.0"
description = "Contract server shim hosting foreign-SDK agents under sausheong/runtime"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "openai-agents>=0.17.4",
]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
