[project]
name = "runtime-contract"
version = "0.1.0"
description = "Framework-agnostic HTTP/SSE agent-contract server for hosting foreign-SDK agents under sausheong/runtime"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "prometheus-client>=0.20",
]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["runtime_contract"]

[tool.pytest.ini_options]
testpaths = ["tests"]
